  `----------------------'

----------------------------------------------------------------------
 2.4.2
----------------------------------------------------------------------

 - Updated translations (ca, de, lt, nl, ru).
 - Added command line args -u and -p.
 - Fixed handling of "MODE -o+o nick nick" (#1094026).
 - Plugin API: Added "Key Press" print event.
 - Plugin API: Added "state_cursor" for xchat_get_prefs.
 - Plugin API: Added xchat_strip and xchat_free functions.
 - TCL: Fixed #1110306 (Daniel P. Stasinski).
 - TCL: fillmein.
 - Perl: fillmein.
 - Don't add space character when completion char is blank (#1100711).
 - /TIMER now supports timeouts to one decimal place.
 - Fixed possible crash of open-file dialog on 64-bit machines.
 - Pressing CTRL-O in the DCC Receive window will now open your
   downloads folder.
 - 
 - 


----------------------------------------------------------------------
 2.4.1
----------------------------------------------------------------------

 - Updated translations (ca, de, eu, it, ko, mk, nb, nl, pt, ru, sl,
                         sq, uk, zh_TW).
 - Fixed custom marker-line color not reloading.
 - Brought back the "Connect to selected server only" option in the
   Serverlist edit window (it's like the reverse of "Cycle until
   connected" in 2.0.x).
 - You can now move networks and servers via Shift+Up/Down (in the
   ServerList window).
 - Small efficiency improvements in receiving dcc. It will now not
   send ACKs while the input buffer is non-empty.
 - Python: Fixed crash when a timer callback routine executes
   xchat.unhook() and returns false.
 - Fixed playing sound files with spaces in them.
 - Added support for NickServ on DalNet and FreeNode.
 - Plugin API: Added xchat_get_info(ph,"inputbox");.
 - Added /settext and /setcursor commands for scripters.
 - You can now scroll tabs with the mouse-wheel while hovering over
   the arrow buttons.
 - Fixed connecting to a SSL server via http proxy (#1054152).