@@ -10,16 +10,23 @@
  - Added command line args -u and -p.
  - Fixed handling of "MODE -o+o nick nick" (#1094026).
  - Plugin API: Added "Key Press" print event.
- - Plugin API: Added "state_cursor" for xchat_get_prefs.
- - Plugin API: Added xchat_strip and xchat_free functions.
+   Added "state_cursor" for xchat_get_prefs.
+   Added xchat_strip and xchat_free functions.
+   Added "lasttalk" field to "users" list.
+   Added "charset" field to xchat_get_info.
  - TCL: Fixed #1110306 (Daniel P. Stasinski).
  - TCL: fillmein.
  - Perl: fillmein.
- - Don't add space character when completion char is blank (#1100711).
  - /TIMER now supports timeouts to one decimal place.
  - Fixed possible crash of open-file dialog on 64-bit machines.
  - Pressing CTRL-O in the DCC Receive window will now open your
    downloads folder.
+ - Win32: Default download folder changed to "My Documents\Downloads".
+ - Added -quiet arg to the /charset command.
+ - The /country command now supports a wildcard search.
+ - The user is now warned when real/user name is left blank in the
+   server list window.
+ - Added the /URL command.
  - 
  - 
 
